@@ -17,3 +17,4 @@ tryAgain=Try again
 showAnswer=Show answer
 checkAnswer=Check answer
 ok=OK
+matchingGame=Matching Game
